# nothello

./: CMakeLists.txt  README.md  board.cpp  board.h  cutegames-settings.json  game.cpp  othello-openings.txt  playout.cpp  playout.h  random.cpp  random.h  search.cpp  search.h  str.cpp  str.h  test.cpp  time.cpp  tt.cpp  tt.h  uct.cpp  uct.h  ugi.cpp  ugi.h  uoi.cpp  uoi.h  zobrist.cpp  zobrist.h
